--- a/app/templates/layouts/default.mustache
+++ b/app/templates/layouts/default.mustache
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="UTF-8">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="/stylesheets/bootstrap.css">
-    <link rel="stylesheet" href="/stylesheets/flat-ui.css">
-    <link rel="stylesheet" href="/stylesheets/valeria.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>{{title}}</title>
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/flat-ui.css">
+  <link rel="stylesheet" href="/stylesheets/valeria.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 
-  <body>
-    <div class="container">
-      <div class="row">
-        <div class="page-header span12">
-          <h1><a href="/">Valéria <small>Image Finder</small></a></h1>
-        </div>
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="page-header span12">
+        <h1><a href="/">Valéria <small>Image Finder</small></a></h1>
       </div>
-      {{{yield}}}
     </div>
+    {{{yield}}}
     <script type="text/javascript">
+    bb_bid = "8805";
+    bb_lang = "pt-BR";
+    bb_name = "custom";
+    bb_limit = "8";
+    bb_format = "bbb";
+    </script>
+    <script type="text/javascript" src="http://static.boo-box.com/javascripts/embed.js"></script>
+  </div>
+
+
+  <script type="text/javascript">
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-27916563-8']);
@@ -30,6 +40,6 @@
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
-</script>
-  </body>
+  </script>
+</body>
 </html>
